# Weeee

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: imu_fusion.py
src/weeee/: __init__.py  core.py  imu_fusion.py  simulator.py  wiimote.py
src/weeee/ex/: motionplus_console.py
tests/: test_imu_fusion.py  test_simulator.py  test_simulator_with_oracle.py  test_wiimote.py
typings/hid/: __init__.pyi
