[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weeee"
version = "0.0.1"
description = "A Python library for high-performance Wiimote communication, featuring MotionPlus support and IMU fusion."
readme = "README.md"
authors = [
    { name = "YurufuwaKaisen" },
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "scipy>=1.15.0",
    "hidapi>=0.14.0",
]

keywords = ["wiimote", "nintendo", "imu", "motionplus", "hid", "sensor-fusion"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Repository = "https://github.com/Tebasaki-North-High-School/Weeee.git"
"Bug Tracker" = "https://github.com/Tebasaki-North-High-School/Weeee/issues"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "typos>=1.46.2",
    "scipy-stubs>=1.17.1.4",
]

[tool.pytest.ini_options]
markers = [
    "constants: marks tests as constants (deselect with '-m \"not slow\"')",
    "logic: logical tests for Wiimote operations",
    "motionplus: tests for MotionPlus detection and activation",
    "ir: tests for IR camera functionality",
    "memory: tests for memory read/write operations",
]
addopts = ["--cov=src", "--cov-report=term-missing", "--cov-report=html"]

[tool.mypy]
mypy_path = "typings"

strict = true

warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
